--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "gen-db-types": "npx supabase gen types typescript --project-id qzkrjmmwpvrcslwnacki > database.types.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0",
